[package]
name = "bandtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
talk = {git = "https://github.com/Distributed-EPFL/talk"}
doomstack = { git = "https://github.com/Distributed-EPFL/doomstack" }

tokio = { version = "1.12.0", features = [ "macros", "net", "rt-multi-thread", "io-util", "sync", "time" ] }
atomic-counter = { version = "1.0.1" }

serde = { version = "~1.0", features = [ "derive", "rc" ] }
bincode = { version = "~1.3" }

rand = { version = "0.8.5" }
rand_distr = { version = "0.4.3" }
statistical = { version = "1.0.0" }